CONSUMER: Remove legacy reactor state transitions